<resources>
    <string name="appName">Lyrics</string>
    <string name="songsOverview">Songs</string>
    <string name="emptySongsList">No songs added yet.\nStart by clicking the + button below</string>
    <string name="errorFetchingSongs">Cannot load songs</string>
    <string name="newSong">New song</string>
    <string name="songTitle">Song title</string>
    <string name="singerName">Singer</string>
    <string name="songLyric">Lyric</string>
    <string name="errorEmptySongTitle">Missing song title</string>
    <string name="errorEmptySongPerformer">Missing performer name</string>
    <string name="errorEmptySongLyrics">Missing song lyrics</string>
    <string name="success">Success</string>
    <string name="songDetails">Song details</string>
    <string name="errorSavingSong">Error saving song</string>
    <string name="search">Search</string>
    <string name="errorSearchingSong">Error searching</string>
    <string name="delete">Delete</string>
    <string name="deleteSongPrompt">Do you want to delete this song?</string>
    <string name="errorDeletingSong">Error deleting song</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="errorUnableToEditSong">Song editing unavailable</string>
    <string name="createUser">Create new user</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="about">About me</string>
    <string name="alreadyRegistered">Already have an account?</string>
    <string name="errorUsernameTaken">Username taken</string>
    <string name="errorNoNetworkConnection">You are offline</string>
    <string name="errorEmptyUsername">Username required</string>
    <string name="errorEmptyPassword">Password required</string>
    <string name="errorIncorrectCredentials">Incorrect login credentials</string>
    <string name="logout">Logout</string>
</resources>
