<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation_graph"
    app:startDestination="@id/register">

    <fragment
        android:id="@+id/register"
        android:name="nl.jovmit.lyrics.main.register.Register"
        android:label="@string/createUser"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/openSongsOverview"
            app:destination="@id/songsOverview"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

        <action
            android:id="@+id/openLogin"
            app:destination="@id/login"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/register" />
    </fragment>

    <fragment
        android:id="@+id/login"
        android:name="nl.jovmit.lyrics.main.login.Login"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/openSongsOverview"
            app:destination="@id/songsOverview"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/songsOverview"
        android:name="nl.jovmit.lyrics.main.overview.SongsOverview"
        android:label="@string/songsOverview"
        tools:layout="@layout/fragment_songs_overview">

        <action
            android:id="@+id/openNewSong"
            app:destination="@id/newSong"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/songsOverview" />

        <action
            android:id="@+id/openSongDetails"
            app:destination="@id/songDetails"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/songsOverview" />

        <action
            android:id="@+id/openRegistration"
            app:destination="@id/register"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/newSong"
        android:name="nl.jovmit.lyrics.main.add.NewSong"
        android:label="@string/newSong"
        tools:layout="@layout/fragment_new_song" />

    <fragment
        android:id="@+id/songDetails"
        android:name="nl.jovmit.lyrics.main.details.SongDetails"
        android:label="@string/songDetails"
        tools:layout="@layout/fragment_song_details">
        <argument
            android:name="songId"
            app:argType="string" />
        <action
            android:id="@+id/editSong"
            app:destination="@id/editSong"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/editSong"
        android:name="nl.jovmit.lyrics.main.edit.EditSong"
        android:label="@string/edit"
        tools:layout="@layout/fragment_edit_song">
        <argument
            android:name="songId"
            app:argType="string" />
    </fragment>
</navigation>
