<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/registrationLeftGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/registrationRightGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registrationUsernameTextInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toStartOf="@+id/registrationRightGuideline"
                app:layout_constraintStart_toStartOf="@+id/registrationLeftGuideline"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registrationUsernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registrationPasswordTextInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/registrationRightGuideline"
                app:layout_constraintStart_toStartOf="@+id/registrationLeftGuideline"
                app:layout_constraintTop_toBottomOf="@+id/registrationUsernameTextInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registrationPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registrationAboutTextInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/registrationRightGuideline"
                app:layout_constraintStart_toStartOf="@+id/registrationLeftGuideline"
                app:layout_constraintTop_toBottomOf="@+id/registrationPasswordTextInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registrationAboutEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/about" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/registrationRegisterButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/createUser"
                android:textAllCaps="false"
                app:layout_constraintEnd_toStartOf="@+id/registrationRightGuideline"
                app:layout_constraintStart_toStartOf="@+id/registrationLeftGuideline"
                app:layout_constraintTop_toBottomOf="@+id/registrationAboutTextInput" />

            <TextView
                android:id="@+id/registrationAlreadyRegisteredLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/alreadyRegistered"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/registrationRightGuideline"
                app:layout_constraintStart_toStartOf="@+id/registrationLeftGuideline"
                app:layout_constraintTop_toBottomOf="@+id/registrationRegisterButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/registrationLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whiteTransparent"
        android:elevation="8dp"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>